# VideoWave

./: .gitignore  LICENSE  README.md  audio.py  pyproject.toml  setup.py  test.py  test_cv.py  video.py
VideoWave/: __init__.py  audio.py  video.py  waver.py
tests/: test.py
