[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "VideWave"
version = "0.2.0"
authors = [
    { name="Mario Garcia", email="mariogc@protonmail.com" },
]
description = "Audio wave creator from video and audio files"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "opencv-python",
    "scipy",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/Mayitzin/VideoWave/"
Issues = "https://github.com/Mayitzin/VideoWave/issues"